perryplex_10_deploy_sabnzbd.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: perryplex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
      - name: sabnzbd
        image: linuxserver/sabnzbd:latest
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: sabnzbd-config
          mountPath: /config
        - name: sabnzbd-data-downloads
          mountPath: /downloads
      volumes:
      - name: sabnzbd-config
        nfs:
          server: perrynas
          path: /KubeConfigs/sabnzdb
      - name: sabnzbd-data-downloads
        nfs:
          server: perrynas
          path: /Downloads
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: perryplex
spec:
  selector:
    app: sabnzbd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perryplex-sabnzbd-ingress
  namespace: perryplex
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - sabnzbd.perryinc2.net
    secretName: tls-sabnzbd.perryinc2.net-sabnzbd
  rules:
  - host: sabnzbd.perryinc2.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sabnzbd
            port:
              number: 80
