perryplex_11_deploy_sabnzbd.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  namespace: perryplex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
    spec:
      containers:
      - name: readarr
        image: linuxserver/readarr:nightly
        ports:
        - containerPort: 8787
        volumeMounts:
        - name: readarr-config
          mountPath: /config
        - name: readarr-data-downloads
          mountPath: /downloads
        - name: readarr-data-downloading
          mountPath: /downloading
      volumes:
      - name: readarr-config
        persistentVolumeClaim:
          claimName: pvc-nfs-perryplex-readarr-config
      - name: readarr-data-downloads
        persistentVolumeClaim:
          claimName: pvc-smb-perryplex-downloads
      - name: readarr-data-downloading
        persistentVolumeClaim:
          claimName: pvc-smb-perryplex-downloading
---
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: perryplex
spec:
  selector:
    app: readarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perryplex-readarr-ingress
  namespace: perryplex
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - readarr.perryinc2.net
    secretName: tls-readarr.perryinc2.net-readarr
  rules:
  - host: readarr.perryinc2.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: readarr
            port:
              number: 80
