perryplex_12_deploy_deluge.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge
  namespace: perryplex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deluge
  template:
    metadata:
      labels:
        app: deluge
    spec:
      containers:
      - name: deluge
        image: linuxserver/deluge:latest
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: deluge-config
          mountPath: /config
        - name: deluge-data-downloads
          mountPath: /downloads
      volumes:
      - name: deluge-config
        persistentVolumeClaim:
          claimName: pvc-nfs-perryplex-deluge-config
      - name: deluge-data-downloads
        persistentVolumeClaim:
          claimName: pvc-smb-perryplex-downloads
---
apiVersion: v1
kind: Service
metadata:
  name: deluge
  namespace: perryplex
spec:
  selector:
    app: deluge
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perryplex-deluge-ingress
  namespace: perryplex
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - deluge.perryinc2.net
    secretName: tls-deluge.perryinc2.net-deluge
  rules:
  - host: deluge.perryinc2.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deluge
            port:
              number: 80
