perryplex_13_deploy_harbor.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perryplex-harbor-ingress
  namespace: perryplex
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - harbor.perryinc2.net
    secretName: tls-harbor.perryinc2.net-harbor
  rules:
  - host: harbor.perryinc2.net
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-system-portal
            port:
              number: 80
      - path: /api/
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-system-core
            port:
              number: 80
      - path: /service/
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-system-core
            port:
              number: 80
      - path: /v2/
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-system-core
            port:
              number: 80
      - path: /chartrepo/
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-system-core
            port:
              number: 80
      - path: /c/
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-system-core
            port:
              number: 80
