perryplex_5_deploy_sonarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: perryplex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr:latest
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: sonarr-config
          mountPath: /config
        - name: sonarr-data-tvshows
          mountPath: /tv
        - name: sonarr-data-tvshows3
          mountPath: /tv3
        - name: sonarr-data-downloads
          mountPath: /downloads
      volumes:
      - name: sonarr-config
        persistentVolumeClaim:
          claimName: pvc-nfs-perryplex-sonarr-config
      - name: sonarr-data-tvshows
        persistentVolumeClaim:
          claimName: pvc-smb-perryplex-tvshows
      - name: sonarr-data-tvshows3
        persistentVolumeClaim:
          claimName: pvc-smb-perryplex-tvshows3
      - name: sonarr-data-downloads
        persistentVolumeClaim:
          claimName: pvc-smb-perryplex-downloads
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: perryplex
spec:
  selector:
    app: sonarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8989
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perryplex-sonarr-ingress
  namespace: perryplex
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - sonarr.perryinc2.net
    secretName: tls-sonarr.perryinc2.net-sonarr
  rules:
  - host: sonarr.perryinc2.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 80
