perryplex_6_deploy_radarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: perryplex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: linuxserver/radarr:latest
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: radarr-config
          mountPath: /config
        - name: radarr-data-movies
          mountPath: /movies
        - name: radarr-data-downloads
          mountPath: /downloads
      volumes:
      - name: radarr-config
        persistentVolumeClaim:
          claimName: pvc-nfs-perryplex-radarr-config
      - name: radarr-data-movies
        persistentVolumeClaim:
          claimName: pvc-smb-perryplex-movies
      - name: radarr-data-downloads
        persistentVolumeClaim:
          claimName: pvc-smb-perryplex-downloads
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: perryplex
spec:
  selector:
    app: radarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7878
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perryplex-radarr-ingress
  namespace: perryplex
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - radarr.perryinc2.net
    secretName: tls-radarr.perryinc2.net-radarr
  rules:
  - host: radarr.perryinc2.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 80
