perryplex_7_deploy_bazarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: perryplex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - name: bazarr
        image: linuxserver/bazarr:latest
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: bazarr-config
          mountPath: /config
        - name: bazarr-data-tvshows
          mountPath: /tv
        - name: bazarr-data-tvshows3
          mountPath: /tv3
        - name: bazarr-data-movies
          mountPath: /movies
      volumes:
      - name: bazarr-config
        persistentVolumeClaim:
          claimName: pvc-nfs-perryplex-bazarr-config
      - name: bazarr-data-movies
        persistentVolumeClaim:
          claimName: pvc-smb-perryplex-movies
      - name: bazarr-data-tvshows
        persistentVolumeClaim:
          claimName: pvc-smb-perryplex-tvshows
      - name: bazarr-data-tvshows3
        persistentVolumeClaim:
          claimName: pvc-smb-perryplex-tvshows3
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: perryplex
spec:
  selector:
    app: bazarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6767
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perryplex-bazarr-ingress
  namespace: perryplex
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bazarr.perryinc2.net
    secretName: tls-bazarr.perryinc2.net-bazarr
  rules:
  - host: bazarr.perryinc2.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port:
              number: 80
