perryplex_9_deploy_ombi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ombi
  namespace: perryplex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ombi
  template:
    metadata:
      labels:
        app: ombi
    spec:
      containers:
      - name: ombi
        image: linuxserver/ombi:latest
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: ombi-config
          mountPath: /config
      volumes:
      - name: ombi-config
        persistentVolumeClaim:
          claimName: pvc-nfs-perryplex-ombi-config
---
apiVersion: v1
kind: Service
metadata:
  name: ombi
  namespace: perryplex
spec:
  selector:
    app: ombi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3579
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perryplex-ombi-ingress
  namespace: perryplex
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ombi.perryinc2.net
    secretName: tls-ombi.perryinc2.net-ombi
  rules:
  - host: ombi.perryinc2.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ombi
            port:
              number: 80
